Added another ignore :hand:

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Temporary Items
 *.bak
 Interpreter_Lab1/UARTInts.build_log.htm
 Interpreter_Lab1/Interpreter_uvopt.bak
+Lab1/Interpreter_Lab1/UARTInts.build_log.htm
